# -Nova_Real-CG-Workflow-

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  app_cg.py  implementation.md  launch_cg.bat  pyproject.toml  queries.md  requirements.txt
config/: rules.yaml
docs/: implementation.md  queries.md
evals/: gold.csv  run_eval.py
inbox/incoming/shipment_ACME_001/: email.json
inbox/incoming/shipment_ACME_002/: email.json
inbox/incoming/shipment_ACME_003/: email.json
inbox/incoming/shipment_ACME_004/: email.json
inbox/incoming/shipment_ACME_005/: email.json
inbox/incoming/shipment_ACME_006/: email.json
inbox/incoming/shipment_ACME_007/: email.json
inbox/incoming/shipment_TECHCO_001/: email.json
nova/agents/: cross_validator.py  extractor.py  router.py  validator.py
nova/domain/: models.py
nova/inbox/: __init__.py  watcher.py
nova/infrastructure/: database.py  llm.py
nova/pipeline/: __init__.py  multidoc.py  pipeline.py  pipeline_cg.py
nova/query/: __init__.py  query.py
scripts/: generate_extra_samples.py  generate_gold_samples.py  generate_inbox_samples.py  generate_more_samples.py  generate_prd.py  generate_prd_part2.py  generate_samples.py  reset_inbox.py
tests/unit/: test_cross_doc.py  test_router_gate.py
