[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nova-poc"
version = "2.0.0"
description = "Nova — Governed multi-agent trade document validation pipeline (GoComet DAW Part 2)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    "openai>=1.57.4",
    "langgraph>=0.2.60",
    "langchain-core>=0.3.0",
    "langsmith>=0.2.0",
    "pydantic>=2.10.0",
    "pymupdf>=1.25.0",
    "pyyaml>=6.0",
    "streamlit>=1.41.0",
    "python-dotenv>=1.0.0",
    "reportlab>=4.2.0",
    "Pillow>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nova*"]
